style: style search bar layout and design with responsive overlay positioning

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <!-- Search Bar -->
         <div class="search-bar">
           <label for="search" class="sr-only">Search movies</label>
-          <input type="text" id="search" placeholder="Search movies..." />
+          <input type="text" id="search" placeholder="Search..." />
           <button type="button" aria-label="Search movies">Search</button>
         </div>
 
